tests/ui/regions/regions-early-bound-error-method.stderr
error: lifetime may not live long enough
  --> $DIR/regions-early-bound-error-method.rs:20:9
   |
LL | impl<'a> Box<'a> {
   |      -- lifetime `'a` defined here
LL |     fn or<'b,G:GetRef<'b>>(&self, g2: G) -> &'a isize {
   |           -- lifetime `'b` defined here
LL |         g2.get()
   |         ^^^^^^^^ method was supposed to return data with lifetime `'a` but it is returning data with lifetime `'b`
   |
   = help: consider adding the following bound: `'b: 'a`

error: aborting due to previous error

